// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform No platform provided 1`] = `
<div
  class="emotion-0"
  data-testid="platform"
>
  <span
    data-testid="real"
  />
</div>
`;

exports[`Platform scheduled !== real & cancelled 1`] = `
.emotion-0 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-decoration-color: #fff;
  color: #ff1744!important;
}

.emotion-1 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-decoration-color: #fff;
  padding-left: .3em;
}

<div
  class="emotion-0"
  data-testid="platform"
>
  <span
    data-testid="real"
  >
    1
  </span>
  <span
    class="emotion-1"
    data-testid="scheduled"
  >
    (
    2
    )
  </span>
</div>
`;

exports[`Platform scheduled !== real 1`] = `
.emotion-0 {
  color: #ff1744!important;
}

.emotion-1 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-decoration-color: #fff;
  padding-left: .3em;
}

.emotion-1 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-decoration-color: #fff;
  padding-left: .3em;
}

<div
  class="emotion-0"
  data-testid="platform"
>
  <span
    data-testid="real"
  >
    1
  </span>
  <span
    class="emotion-1"
    data-testid="scheduled"
  >
    (
    2
    )
  </span>
</div>
`;

exports[`Platform scheduled === real & cancelled 1`] = `
.emotion-0 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-decoration-color: #fff;
}

<div
  class="emotion-0"
  data-testid="platform"
>
  <span
    data-testid="real"
  >
    1
  </span>
</div>
`;

exports[`Platform scheduled === real 1`] = `
<div
  class="emotion-0"
  data-testid="platform"
>
  <span
    data-testid="real"
  >
    1
  </span>
</div>
`;
